fix buttons on mobile

--- a/p5js/image-majority-automaton/styles.css
+++ b/p5js/image-majority-automaton/styles.css
@@ -351,7 +351,16 @@ button:disabled {
         flex-direction: column;
     }
     
+    .button-group.automaton-controls {
+        flex-direction: row;
+        justify-content: center;
+    }
+    
     button {
         width: 100%;
+    }
+    
+    .icon-btn {
+        width: 44px;
     }
 }
